--- a/category.html
+++ b/category.html
@@ -8,89 +8,88 @@
 </head>
 <body>
 <div class="main">
-    <div class="mainHead grayBox">
-        <div class="insideHeader">
-            <div class="main navButton">
-                <a href="landing.html" title="Host page">About us</a>
-            </div>
-            <div class="basket navButton">
-                <a href="userBasket.html" target="_blank" title="My order">
-                    <img src=resources/shopping-basket.png alt="Basket" title="My choice">
-                </a>
-            </div>
-            <div class="createAccount navButton">
-                <a href="create.html" title="Create account">Create Account</a>
-            </div>
-            <div class="Login navButton">
-                <a href="" title="Login">Login</a>
-            </div>
+    <div class="insideHeader">
+        <div class="main navButton">
+            <a href="landing.html" title="Host page">About us</a>
         </div>
-    </div>
-    <div class="mainBody">
-        <div class="insideBody">
-            <div class="good">
-                <div class="img"></div>
-                <div class="buyBotton">
-                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
-                </div>
-            </div>
-            <div class="good">
-                <div class="img"></div>
-                <div class="buyBotton">
-                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
-                </div>
-            </div>
-            <div class="good">
-                <div class="img"></div>
-                <div class="buyBotton">
-                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
-                </div>
-            </div>
-            <div class="good">
-                <div class="img"></div>
-                <div class="buyBotton">
-                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
-                </div>
-            </div>
-            <div class="good">
-                <div class="img"></div>
-                <div class="buyBotton">
-                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
-                </div>
-            </div>
-            <div class="good">
-                <div class="img"></div>
-                <div class="buyBotton">
-                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
-                </div>
-            </div>
-            <div class="good">
-                <div class="img"></div>
-                <div class="buyBotton">
-                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
-                </div>
-            </div>
-            <div class="good">
-                <div class="img"></div>
-                <div class="buyBotton">
-                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
-                </div>
-            </div>
-            <div class="good">
-                <div class="img"></div>
-                <div class="buyBotton">
-                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
-                </div>
-            </div>
-            <div class="good">
-                <div class="img"></div>
-                <div class="buyBotton">
-                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
-                </div>
-            </div>
+        <div class="basket navButton">
+            <a href="userBasket.html" target="_blank" title="My order">
+                <img src=resources/shopping-basket.png alt="Basket" title="My choice">
+            </a>
+        </div>
+        <div class="createAccount navButton">
+            <a href="create.html" title="Create account">Create Account</a>
+        </div>
+        <div class="Login navButton">
+            <a href="" title="Login">Login</a>
         </div>
     </div>
 
+    <div class="body">
+        <div class="insideBody">
+            <div class="good">
+                <div class="goodImg"></div>
+                <div class="buyBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
+                </div>
+            </div>
+            <div class="good">
+                <div class="goodImg"></div>
+                <div class="buyBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
+                </div>
+            </div>
+            <div class="good">
+                <div class="goodImg"></div>
+                <div class="buyBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
+                </div>
+            </div>
+            <div class="good">
+                <div class="goodImg"></div>
+                <div class="buyBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
+                </div>
+            </div>
+            <div class="good">
+                <div class="goodImg"></div>
+                <div class="buyBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
+                </div>
+            </div>
+            <div class="good">
+                <div class="goodImg"></div>
+                <div class="buyBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
+                </div>
+            </div>
+            <div class="good">
+                <div class="goodImg"></div>
+                <div class="buyBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
+                </div>
+            </div>
+            <div class="good">
+                <div class="goodImg"></div>
+                <div class="buyBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
+                </div>
+            </div>
+            <div class="good">
+                <div class="goodImg"></div>
+                <div class="buyBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
+                </div>
+            </div>
+            <div class="good">
+                <div class="goodImg"></div>
+                <div class="buyBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </div>
 </body>
 </html>
