--- a/category.html
+++ b/category.html
@@ -28,61 +28,61 @@
     <div class="body">
         <div class="insideBody">
             <div class="good">
-                <div class="goodImg"></div>
+                <div class="goodImg drum1"></div>
                 <div class="buyBotton">
                     <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
                 </div>
             </div>
             <div class="good">
-                <div class="goodImg"></div>
+                <div class="goodImg drum2"></div>
                 <div class="buyBotton">
                     <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
                 </div>
             </div>
             <div class="good">
-                <div class="goodImg"></div>
+                <div class="goodImg drum3"></div>
                 <div class="buyBotton">
                     <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
                 </div>
             </div>
             <div class="good">
-                <div class="goodImg"></div>
+                <div class="goodImg drum4"></div>
                 <div class="buyBotton">
                     <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
                 </div>
             </div>
             <div class="good">
-                <div class="goodImg"></div>
+                <div class="goodImg drum5"></div>
                 <div class="buyBotton">
                     <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
                 </div>
             </div>
             <div class="good">
-                <div class="goodImg"></div>
+                <div class="goodImg drum6"></div>
                 <div class="buyBotton">
                     <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
                 </div>
             </div>
             <div class="good">
-                <div class="goodImg"></div>
+                <div class="goodImg drum7"></div>
                 <div class="buyBotton">
                     <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
                 </div>
             </div>
             <div class="good">
-                <div class="goodImg"></div>
+                <div class="goodImg drum8"></div>
                 <div class="buyBotton">
                     <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
                 </div>
             </div>
             <div class="good">
-                <div class="goodImg"></div>
+                <div class="goodImg drum9"></div>
                 <div class="buyBotton">
                     <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
                 </div>
             </div>
             <div class="good">
-                <div class="goodImg"></div>
+                <div class="goodImg drum10"></div>
                 <div class="buyBotton">
                     <button class="btn btn-lg btn-primary btn-block" type="button">Add to basket</button>
                 </div>
