--- a/userBasket.html
+++ b/userBasket.html
@@ -14,7 +14,7 @@
                 <a href="landing.html" title="Host page">About us</a>
             </div>
             <div class="basket navButton">
-                <a href="userBasket.html" target="_blank" title="My order">
+                <a href="userBasket.html" title="My order">
                     <img src=resources/shopping-basket.png alt="Basket" title="My choice">
                 </a>
             </div>
@@ -27,10 +27,81 @@
         </div>
     </div>
     <div class="mainBody">
-
+        <div class="basketHead">
+            <div class="oldOrders btnOrdr">
+                <a>My old orders</a>
+            </div>
+            <div class="currentOrder btnOrdr">
+                <a>My current order</a>
+            </div>
+            <div class="saveOrder btnOrdr">
+                <a>Save current order</a>
+            </div>
         </div>
-
+        <div class="basketList">
+            <div class="good">
+                <div class="goodImg drum8"></div>
+                <div class="deleteBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Delete from basket</button>
+                </div>
+            </div>
+            <div class="good">
+                <div class="goodImg drum8"></div>
+                <div class="deleteBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Delete from basket</button>
+                </div>
+            </div>
+            <div class="good">
+                <div class="goodImg drum8"></div>
+                <div class="deleteBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Delete from basket</button>
+                </div>
+            </div>
+            <div class="good">
+                <div class="goodImg drum8"></div>
+                <div class="deleteBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Delete from basket</button>
+                </div>
+            </div>
+            <div class="good">
+                <div class="goodImg drum8"></div>
+                <div class="deleteBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Delete from basket</button>
+                </div>
+            </div>
+            <div class="good">
+                <div class="goodImg drum8"></div>
+                <div class="deleteBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Delete from basket</button>
+                </div>
+            </div>
+            <div class="good">
+                <div class="goodImg drum8"></div>
+                <div class="deleteBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Delete from basket</button>
+                </div>
+            </div>
+            <div class="good">
+                <div class="goodImg drum8"></div>
+                <div class="deleteBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Delete from basket</button>
+                </div>
+            </div>
+            <div class="good">
+                <div class="goodImg drum8"></div>
+                <div class="deleteBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Delete from basket</button>
+                </div>
+            </div>
+            <div class="good">
+                <div class="goodImg drum8"></div>
+                <div class="deleteBotton">
+                    <button class="btn btn-lg btn-primary btn-block" type="button">Delete from basket</button>
+                </div>
+            </div>
+        </div>
     </div>
+
 </div>
 </body>
 </html>
